fix header overlap issue. closes #48. closes #35

--- a/less/app.less
+++ b/less/app.less
@@ -135,6 +135,8 @@ header {
 	.header-wrap {
 	    width: 100%;
 	    background-color: #222;
+	    
+	    &.affix { z-index: 2000; }
 	}
 }
 
